<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">

        <ImageButton
            android:id="@+id/Ib_fav"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_no_favorito"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagenIv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_imagen"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/Tv_titulo"
            android:text="@string/Tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:maxLines="1"
            android:textSize="16.5sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/Tv_descripcion"
            android:text="@string/Tv_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="2"
            android:textStyle="italic"/>

        <!--Direccion-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="18dp"
                android:layout_height="24dp"
                android:src="@drawable/ico_direccion_item"/>

            <TextView
                android:id="@+id/Tv_direccion"
                android:text="@string/Tv_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginStart="4dp"
                android:maxLines="1"
                android:textStyle="bold"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Fecha-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="18dp"
                android:layout_height="24dp"
                android:src="@drawable/ico_fecha_item"/>

            <TextView
                android:id="@+id/Tv_fecha"
                android:text="@string/Tv_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginStart="4dp"
                android:maxLines="1"
                android:textStyle="bold"/>


        </androidx.appcompat.widget.LinearLayoutCompat>
        
        <TextView
            android:id="@+id/Tv_condicion"
            android:text="@string/Tv_condicion"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--Fecha-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Tv_precio"
                android:text="@string/Tv_precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/Tv_simbolo_precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textSize="15sp"
                android:layout_marginEnd="3dp"
                android:textStyle="bold"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>